@@ -1,3 +1,13 @@
+2010-05-23 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2.1-OOO320_m18-1 :
+	- new snapshot = 3.2.1 RC2
+	- rework optional dependencies to drop some hardeps, #19445
+	- rechecked core deps when optional deps are not present
+	- use system libmythes
+	- apply ooo-build patch to use system redland/cppunit again
+	- build with --with-system-unixodbc-headers, add unixodbc optdep
+
 2010-05-10 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2.1-OOO320_m17-1 :
